# 2024-2_ROKEYBOOTCAMP_serving_robot_project

./: .gitignore  README.md
a1/serving_robot/: setup.cfg  setup.py
a1/serving_robot/resource/ui/: kiosk.ui  kiosk_arrival.ui  kiosk_pay.ui  주방_menu_ui_초.ui
a1/serving_robot/serving_robot/kitchen_display/: kit.py
a1/serving_robot/serving_robot/kitchen_display/ros_study_msgs2/: CMakeLists.txt
a1/serving_robot/serving_robot/test_node/: subscribe_node_v2.py
a1/serving_robot_interface/: CMakeLists.txt  package.xml
a1/serving_robot_interface/srv/: MySrv.srv
src/serving_robot/: package.xml  requirements.txt  setup.py
src/serving_robot/launch/: kiosk.launch.py
src/serving_robot/resource/database/: init.sql
src/serving_robot/resource/map/: map.pgm  map.yaml
src/serving_robot/resource/ui/: button.ui  kiosk.ui  kiosk_arrival.ui  kit_menu_ui.ui
src/serving_robot/serving_robot/database/: Restaurant_order.py  __init__.py  data_send.py  ui_tab.py
src/serving_robot/serving_robot/kiosk/: arrival_kiosk.py  arrival_robot_kiosk.py  kiosk_ui.py  main2.py  order_node.py  publisher.py  subscriber.py  test_kitchen_tab.py
src/serving_robot/serving_robot/kit_to_robot/: control.py  publish.py
src/serving_robot/serving_robot/kitchen_display/: arrival_kitchen.py  kit copy.py  kit_copy.py  pub.py
src/serving_robot/serving_robot/kitchen_display/qt/src/: kit.py  pub.py
src/serving_robot/serving_robot/kitchen_display/qt/src/my_test_package/: package.xml  setup.py
src/serving_robot/serving_robot/kitchen_display/qt/src/my_test_package/launch/: my_launch_file.launch.py
src/serving_robot/serving_robot/kitchen_display/qt/src/my_test_package/my_test_package/: 1.py  kit2.py  pub.py
src/serving_robot/serving_robot/kitchen_display/qt/ㄴ1/: kit.py  pub.py  publisher_node.py
src/serving_robot/serving_robot/kitchen_display/ros_study_msgs2/: package.xml
src/serving_robot/serving_robot/kitchen_display/ros_study_msgs2/srv/: MySrv.srv
src/serving_robot/serving_robot/test_node/: publish_node_v2.py
src/serving_robot_interface/: CMakeLists.txt  package.xml
src/serving_robot_interface/action/: Arrive.action
src/serving_robot_interface/srv/: MySrv.srv
기획파일/: 1주차_기획서.docx  사용자중심아키텍쳐터틀봇.drawio  소프트웨어아키텍쳐.drawio  소프트웨어아키텍쳐터틀봇.drawio
코드리팩토링및코딩컨벤션/: README.md  기능별아키텍쳐.drawio  설계도.md  소프트웨어 아키텍쳐.drawio  시스템아키텍쳐.drawio
