<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>serving_robot</name>
  <version>0.0.0</version>
  <description>This package is for the serving robot service project using the TurtleBot from the Rocky Bootcamp</description>
  <maintainer email="128200788+malenwater@users.noreply.github.com">sunwolee</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>python3-playsound</exec_depend>
  <depend>playsound</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>python3-pyside2</depend>
  <depend>python3-threading</depend>
  <depend>python3-queue</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
